<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Twitch">

        <EditTextPreference
            android:key="settings_twitch_username"
            android:title="@string/settings_twitch_username"
            android:summary="@string/settings_twitch_username_summary"
            android:dialogTitle="@string/settings_twitch_username_dialog"
            android:hint="Your username"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Kodi">

        <EditTextPreference
            android:key="settings_kodi_address"
            android:title="@string/settings_kodi_address"
            android:summary="@string/settings_kodi_address_summary"
            android:dialogTitle="@string/settings_kodi_address_dialog"
            android:hint="http://kodi.local/jsonrpc"
            android:inputType="textUri" />

        <ListPreference
            android:key="settings_kodi_playback_quality"
            android:title="@string/settings_kodi_playback_quality"
            android:dialogTitle="@string/settings_kodi_playback_quality_dialog"
            android:summary="@string/settings_kodi_playback_summary"
            android:entries="@array/settings_kodi_playback_quality_names"
            android:entryValues="@array/settings_kodi_playback_quality_values"
            android:defaultValue="5" />

    </PreferenceCategory>

</PreferenceScreen>